--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
     <style name="AppTheme.Launcher" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/launcher.theme.colorPrimary</item>
-        <item name="colorPrimaryDark">@color/launcher.theme.colorPrimaryDark </item>
+        <item name="colorPrimaryDark">@color/sea.foam.green</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@drawable/screen</item>
     </style>
