--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/launcher.theme.colorPrimary</item>
         <item name="colorPrimaryDark">@color/sea.foam.green</item>
@@ -13,7 +13,7 @@
     <style name="AppTheme.Launcher" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/launcher.theme.colorPrimary</item>
-        <item name="colorPrimaryDark">@color/sea.foam.green</item>
+        <item name="colorPrimaryDark">@color/dark.imperial.blue</item>
         <item name="colorAccent">@color/sea.foam.green</item>
         <item name="android:windowBackground">@drawable/screen</item>
     </style>
