--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -69,13 +69,13 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <com.google.android.gms.common.SignInButton
-                            android:id="@+id/googleBtn"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                        android:id="@+id/googleBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
 
                     </com.google.android.gms.common.SignInButton>
 
@@ -84,20 +84,22 @@
                         android:id="@+id/faceButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                         />
+                        android:layout_margin="4dp" />
+
+                    <TextView
+                        android:id="@+id/link.signup"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="24dp"
+
+                        android:text="@string/create.account"
+                        android:textSize="16dip"
+                        android:layout_margin="4dp"
+                       />
 
 
                 </LinearLayout>
 
-
-                <TextView android:id="@+id/link.signup"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="24dp"
-                    android:text="@string/create.account"
-                    android:gravity="center"
-                    android:textSize="16dip"/>
 
             </LinearLayout>
         </ScrollView>
