--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -74,7 +74,7 @@
 
                     <com.google.android.gms.common.SignInButton
                             android:id="@+id/googleBtn"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
                     </com.google.android.gms.common.SignInButton>
@@ -84,7 +84,6 @@
                         android:id="@+id/faceButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
                          />
 
 
