--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,12 @@
             android:background="@color/dark.imperial.blue"
             />
 
+        <Button
+            android:id="@+id/testBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Test" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/postRecyclerView"
             android:layout_width="wrap_content"
