--- a/app/src/main/res/layout/soa_post.xml
+++ b/app/src/main/res/layout/soa_post.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="2dp">
+    app:cardCornerRadius="4dp"
+    app:cardElevation="4dp"
+    android:layout_margin="20dp"
+    android:padding="5dp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -32,7 +40,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
             <LinearLayout
-                android:id="@+id/deatails"
+                android:id="@+id/details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -57,7 +65,7 @@
                     android:text="Sept 11, 2018"
                     android:layout_margin="2dp"
                     android:textSize="13dp"
-                    android:layout_weight="1.0"
+                    android:layout_weight="0.5"
                     android:textStyle="italic"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
@@ -66,7 +74,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
-                    android:text="100k"
+                    android:text="100kjfjhfdjhfjhfjf"
                     android:textSize="15dp"
                     android:layout_margin="2dp"
                     android:layout_weight="0.0"
@@ -87,3 +95,5 @@
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
+
+</LinearLayout>
