--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,15 @@
     tools:context=".MainActivity"
     tools:ignore="ExtraText">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <include
+            android:id="@+id/home_toolbar"
+            layout = "@layout/main_toolbar"/>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_logout"
